services/go-web-app/overlays/lab/replicas-patch.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-web-app


spec:
  replicas: 2
