services/go-web-app/overlays/lab/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-web-app-ingress
  annnotations:



spec: Opaque
  rules:
  - host: task.vedant.life
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-web-app
            port:
              number: 8080
